Add decision tree on how to configure classpath/ modular mode.